added_portfolio_ui_origin_in_cors_and_some_changes_in_api
